[package]
name = "http"
# When releasing to crates.io:
# - Update html_root_url in lib.rs.
# - Update CHANGELOG.md.
# - Create git tag
version = "1.3.1"
readme = "README.md"
documentation = "https://docs.rs/http"
repository = "https://github.com/hyperium/http"
license = "MIT OR Apache-2.0"
authors = [
  "Alex Crichton <alex@alexcrichton.com>",
  "Carl Lerche <me@carllerche.com>",
  "Sean McArthur <sean@seanmonstar.com>",
]
description = """
A set of types for representing HTTP requests and responses.
"""
keywords = ["http"]
categories = ["web-programming"]
edition = "2024"
rust-version = "1.87"

# https://doc.rust-lang.org/rustc/lints/groups.html
[lints.rust]
unsafe_code = "allow"

unused = { level = "deny", priority = -2 }
future-incompatible = { level = "deny", priority = -1 }
keyword-idents = { level = "deny", priority = -1 }
let-underscore = { level = "deny", priority = -1 }
nonstandard-style = { level = "deny", priority = -1 }
refining-impl-trait = { level = "deny", priority = -1 }
rust-2018-compatibility = { level = "deny", priority = -1 }
rust-2018-idioms = { level = "deny", priority = -1 }
rust-2021-compatibility = { level = "deny", priority = -1 }
rust-2024-compatibility = { level = "deny", priority = -1 }

# https://rust-lang.github.io/rust-clippy/master/index.html
[lints.clippy]
cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# FIXME
multiple_crate_versions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cognitive_complexity = "allow"
should_panic_without_expect = "allow"

[workspace]
members = [
  ".",
]
exclude = [
  "fuzz",
  "benches"
]

[features]
default = ["std"]
std = []

[dependencies]
bytes = "1.10"
fnv = "1.0"
itoa = "1.0"

[dev-dependencies]
quickcheck = "1"
rand = "0.9.1"
serde = "1.0"
serde_json = "1.0"
doc-comment = "0.3"
